--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "asyncpg>=0.30.0",
+    "fastapi[standard]>=0.115.8",
+    "python-dotenv>=1.0.1",
+    "sqlalchemy[asyncio]>=2.0.37",
+]
